--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/C6.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Culin6 is a recipe sharing platform where users can explore, share, and review exciting recipes. Save your favorites and receive updates!"
+    />
+    <title>Culin6</title>
   </head>
   <body>
     <div id="root"></div>
